// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test File: GrettingComponent.js The component should display the subtitle "¿Are you ready to code today?". 1`] = `
<div>
  <h1>
    Default greeting title.
  </h1>
  <p>
    ¿Are you ready to code today?
  </p>
</div>
`;

exports[`Test File: GrettingComponent.js The component should display the title "Hello Developer!". 1`] = `
<div>
  <h1>
    Hello Developer!
  </h1>
  <p>
    Default greeting subtitle.
  </p>
</div>
`;
